--- a/_pages/404.md
+++ b/_pages/404.md
@@ -1,6 +1,6 @@
 ---
 title: "Page Not Found"
-excerpt: "Page not found. Your pixels are in another canvas."
+excerpt: "Four hundred and four big ones, I'm afraid."
 sitemap: false
 permalink: /404.html
 ---
