--- a/_publications/2009-06-01-zta-egr1.md
+++ b/_publications/2009-06-01-zta-egr1.md
@@ -2,15 +2,12 @@
 title: "The Epstein–Barr virus lytic cycle activator Zta interacts with methylated ZRE in the promoter of host target gene egr1"
 collection: publications
 permalink: /publication/2009-06-01-zta-egr1
-excerpt: 'My *first* first author publication. EBV, EGR1, and EMSAs [![Static Badge](https://img.shields.io/badge/pdf-8A2BE2)](http://jamieheather.github.io/files/Heather_2009_JGV_EBV_Zta_EGR1.pdf)
-'
+excerpt: [![Static Badge](https://img.shields.io/badge/pdf-8A2BE2)](http://jamieheather.github.io/files/Heather_2009_JGV_EBV_Zta_EGR1.pdf) [![Static Badge](https://img.shields.io/badge/doi-8A2B22)](https://dx.doi.org/10.1099/vir.0.007922-0) 'My *first* first author publication. EBV, EGR1, and EMSAs'
 date: 2009-06-01
 venue: 'Journal of General Virology'
-paperurl: 'http://jamieheather.github.io/files/Heather_2009_JGV_EBV_Zta_EGR1.pdf'
 
 ---
 
 This was my first paper, from my master's work in the Sinclair lab at Sussex. This investigated the binding of the EBV transactivating Zta protein to the host human *EGR1* gene. We used EMSAs to identify which of the prospective sites were bound most readily, factoring in this protein's ability to preferentially bind to methylated response elements.
 
-[pdf](http://jamieheather.github.io/files/Heather_2009_JGV_EBV_Zta_EGR1.pdf)
-[![Static Badge](https://img.shields.io/badge/pdf-8A2BE2)](http://jamieheather.github.io/files/Heather_2009_JGV_EBV_Zta_EGR1.pdf)
+[![Static Badge](https://img.shields.io/badge/pdf-8A2BE1)](http://jamieheather.github.io/files/Heather_2009_JGV_EBV_Zta_EGR1.pdf) [![Static Badge](https://img.shields.io/badge/doi-8A2B22)](https://dx.doi.org/10.1099/vir.0.007922-0)
