--- a/_publications/2009-06-01-zta-egr1.md
+++ b/_publications/2009-06-01-zta-egr1.md
@@ -5,6 +5,7 @@ permalink: /publication/2009-06-01-zta-egr1
 excerpt: [![Static Badge](https://img.shields.io/badge/pdf-8A2BE2)](http://jamieheather.github.io/files/Heather_2009_JGV_EBV_Zta_EGR1.pdf) [![Static Badge](https://img.shields.io/badge/doi-8A2B22)](https://dx.doi.org/10.1099/vir.0.007922-0) 'My *first* first author publication. EBV, EGR1, and EMSAs'
 date: 2009-06-01
 venue: 'Journal of General Virology'
+paperurl: 'http://jamieheather.github.io/files/Heather_2009_JGV_EBV_Zta_EGR1.pdf'
 
 ---
 
