--- a/_publications/2009-06-01-zta-egr1.md
+++ b/_publications/2009-06-01-zta-egr1.md
@@ -6,6 +6,7 @@ excerpt: [![Static Badge](https://img.shields.io/badge/pdf-8A2BE2)](http://jamie
 date: 2009-06-01
 venue: 'Journal of General Virology'
 paperurl: 'http://jamieheather.github.io/files/Heather_2009_JGV_EBV_Zta_EGR1.pdf'
+citation: 'test'
 
 ---
 
