2024-05-27: add tools + resources, minor pub fixes

--- a/_publications/2009-06-01-zta-egr1.md
+++ b/_publications/2009-06-01-zta-egr1.md
@@ -1,5 +1,5 @@
 ---
-title: "The Epstein–Barr virus lytic cycle activator Zta interacts with methylated ZRE in the promoter of host target gene egr1"
+title: "The Epstein-Barr virus lytic cycle activator Zta interacts with methylated ZRE in the promoter of host target gene egr1"
 collection: publications
 permalink: /publication/2009-06-01-zta-egr1
 excerpt: '[![Static Badge](https://img.shields.io/badge/pdf-8A2BE2)](http://jamieheather.github.io/files/Heather_2009_JGV_EBV_Zta_EGR1.pdf) [![Static Badge](https://img.shields.io/badge/doi-purple)](https://dx.doi.org/10.1099/vir.0.007922-0) My *first* first author publication: EBV, EMSAs, and EGR1.'
