--- a/_publications/2022-03-24-stitchr.md
+++ b/_publications/2022-03-24-stitchr.md
@@ -2,7 +2,7 @@
 title: "Stitchr: stitching coding TCR nucleotide sequences from V/J/CDR3 information"
 collection: publications
 permalink: /publication/2022-03-24-stitchr
-excerpt: '[![Static Badge](https://img.shields.io/badge/pdf-8A2BE2)](http://jamieheather.github.io/files/Heather_2022_NAR_Stitchr.pdf) [![Static Badge](https://img.shields.io/badge/doi-purple)](https://dx.doi.org/10.1093/nar/gkac190) [![Static Badge](https://img.shields.io/badge/data-green)](https://github.com/JamieHeather/stitchr-paper-analysis) [![Static Badge](https://img.shields.io/badge/code-blue)](https://github.com/JamieHeather/stitchr) Stitchr for generating full coding TCR sequences'
+excerpt: '[![Static Badge](https://img.shields.io/badge/pdf-8A2BE2)](http://jamieheather.github.io/files/Heather_2022_NAR_Stitchr.pdf) [![Static Badge](https://img.shields.io/badge/doi-purple)](https://dx.doi.org/10.1093/nar/gkac190) [![Static Badge](https://img.shields.io/badge/data-green)](https://github.com/JamieHeather/stitchr-paper-analysis) [![Static Badge](https://img.shields.io/badge/code-blue)](https://github.com/JamieHeather/stitchr) Stitchr for generating full coding TCR sequences.'
 date: 2022-03-24
 venue: 'Nucleic Acids Research'
 paperurl: 'http://jamieheather.github.io/files/Heather_2022_NAR_Stitchr.pdf'
