2024-05-27: fix returns in markdown generator

--- a/_publications/2022-03-24-stitchr.md
+++ b/_publications/2022-03-24-stitchr.md
@@ -7,7 +7,10 @@ date: 2022-03-24
 venue: 'Nucleic Acids Research'
 paperurl: 'http://jamieheather.github.io/files/Heather_2022_NAR_Stitchr.pdf'
 ---
-Stitchr is the culmination of efforts started during my time in the Cobbold lab, during which I was designing some TCR sequences the old-fashioned way – i.e., by hand. As this is a highly manual process, even for someone that spends as much time looking at TCR sequences as I do, I thought it would be a nice idea to automate it. This also would hopefully provide a robust repeatable and reproducible way to produce TCR sequences, which if you’ve ever dug around in supplementary tables and patents etc looking for sequences to clone, you will appreciate the need for.\n\n\nAfter I popped my initial sparse function on Github people started using it, and collaborators started asking me to make TCR sequences for them. When Mark left for industry and I transitioned into Aaron Hata’s lab I found myself needing even more sequences, so I built it out into a full package, which I am very gratified to see is becoming somewhat popular among people that do both functional TCR cellular assays and in silico TCR bioinformatics and predictions.
+Stitchr is the culmination of efforts started during my time in the Cobbold lab, during which I was designing some TCR sequences the old-fashioned way – i.e., by hand. As this is a highly manual process, even for someone that spends as much time looking at TCR sequences as I do, I thought it would be a nice idea to automate it. This also would hopefully provide a robust repeatable and reproducible way to produce TCR sequences, which if you’ve ever dug around in supplementary tables and patents etc looking for sequences to clone, you will appreciate the need for.
+
+
+After I popped my initial sparse function on Github people started using it, and collaborators started asking me to make TCR sequences for them. When Mark left for industry and I transitioned into Aaron Hata’s lab I found myself needing even more sequences, so I built it out into a full package, which I am very gratified to see is becoming somewhat popular among people that do both functional TCR cellular assays and in silico TCR bioinformatics and predictions.
 
 
 
