2024-06-19: add preprints to select papers

--- a/_publications/2022-03-24-stitchr.md
+++ b/_publications/2022-03-24-stitchr.md
@@ -2,7 +2,7 @@
 title: "Stitchr: stitching coding TCR nucleotide sequences from V/J/CDR3 information"
 collection: publications
 permalink: /publication/2022-03-24-stitchr
-excerpt: '[![Static Badge](https://img.shields.io/badge/pdf-8A2BE2)](http://jamieheather.github.io/files/Heather_2022_NAR_Stitchr.pdf) [![Static Badge](https://img.shields.io/badge/doi-purple)](https://dx.doi.org/10.1093/nar/gkac190) [![Static Badge](https://img.shields.io/badge/data-green)](https://github.com/JamieHeather/stitchr-paper-analysis) [![Static Badge](https://img.shields.io/badge/code-blue)](https://github.com/JamieHeather/stitchr) Stitchr for generating full coding TCR sequences.'
+excerpt: '[![Static Badge](https://img.shields.io/badge/pdf-8A2BE2)](http://jamieheather.github.io/files/Heather_2022_NAR_Stitchr.pdf) [![Static Badge](https://img.shields.io/badge/doi-purple)](https://dx.doi.org/10.1093/nar/gkac190) [![Static Badge](https://img.shields.io/badge/preprint-red)](https://dx.doi.org/10.1101/2021.12.20.473544 ) [![Static Badge](https://img.shields.io/badge/data-green)](https://github.com/JamieHeather/stitchr-paper-analysis) [![Static Badge](https://img.shields.io/badge/code-blue)](https://github.com/JamieHeather/stitchr) Stitchr for generating full coding TCR sequences.'
 date: 2022-03-24
 venue: 'Nucleic Acids Research'
 paperurl: 'http://jamieheather.github.io/files/Heather_2022_NAR_Stitchr.pdf'
@@ -14,4 +14,4 @@ After I popped my initial sparse function on Github people started using it, and
 
 
 
-[![Static Badge](https://img.shields.io/badge/pdf-8A2BE2)](http://jamieheather.github.io/files/Heather_2022_NAR_Stitchr.pdf) [![Static Badge](https://img.shields.io/badge/doi-purple)](https://dx.doi.org/10.1093/nar/gkac190) [![Static Badge](https://img.shields.io/badge/data-green)](https://github.com/JamieHeather/stitchr-paper-analysis) [![Static Badge](https://img.shields.io/badge/code-blue)](https://github.com/JamieHeather/stitchr) 
+[![Static Badge](https://img.shields.io/badge/pdf-8A2BE2)](http://jamieheather.github.io/files/Heather_2022_NAR_Stitchr.pdf) [![Static Badge](https://img.shields.io/badge/doi-purple)](https://dx.doi.org/10.1093/nar/gkac190) [![Static Badge](https://img.shields.io/badge/preprint-red)](https://dx.doi.org/10.1101/2021.12.20.473544 ) [![Static Badge](https://img.shields.io/badge/data-green)](https://github.com/JamieHeather/stitchr-paper-analysis) [![Static Badge](https://img.shields.io/badge/code-blue)](https://github.com/JamieHeather/stitchr) 
